[gd_scene load_steps=4 format=3 uid="uid://c40h854t3v4kh"]

[ext_resource type="Script" path="res://Inventory/custom_plant_item.gd" id="1_j4ybg"]
[ext_resource type="Texture2D" uid="uid://bunncuafkwd5u" path="res://icon.svg" id="2_rl53t"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_t6u5a"]
size = Vector2(40, 40)

[node name="PlantItem" type="Node2D"]
script = ExtResource("1_j4ybg")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(1.90735e-06, 1.90735e-06)
scale = Vector2(0.3125, 0.3125)
texture = ExtResource("2_rl53t")

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("RectangleShape2D_t6u5a")

[connection signal="body_entered" from="Area2D" to="." method="_on_area_2d_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_area_2d_body_exited"]
[connection signal="mouse_entered" from="Area2D" to="." method="_on_area_2d_mouse_entered"]
[connection signal="mouse_exited" from="Area2D" to="." method="_on_area_2d_mouse_exited"]
